--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
     "dev": "ts-node-dev --respawn -- src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "keywords": ["http", "axios-alike", "fetch", "interceptors"],
+  "author": "rochismo <https://github.com/rochismo>",
   "license": "ISC",
   "devDependencies": {
     "ts-node-dev": "^1.0.0",
     "typescript": "^4.1.2"
+  },
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/rochismo/pester"
   }
 }
