--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rochismo/pester",
-  "version": "1.0.19",
+  "version": "1.0.20",
   "description": "A simple http library for web client",
   "main": "index.js",
   "scripts": {
@@ -8,7 +8,12 @@
     "dev": "ts-node-dev --respawn -- src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["http", "axios-alike", "fetch", "interceptors"],
+  "keywords": [
+    "http",
+    "axios-alike",
+    "fetch",
+    "interceptors"
+  ],
   "author": "rochismo <https://github.com/rochismo>",
   "license": "ISC",
   "devDependencies": {
@@ -16,7 +21,7 @@
     "typescript": "^4.1.2"
   },
   "repository": {
-    "type" : "git",
-    "url" : "https://github.com/rochismo/pester"
+    "type": "git",
+    "url": "https://github.com/rochismo/pester"
   }
 }
