--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "tsc && node dist/index.js",
     "dev": "ts-node-dev --respawn -- src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha -r ts-node/register tests/**/*.test.ts --timeout 10000",
+    "coverage": "nyc -r lcov -e .ts -x \"*.test.ts\" npm run test"
   },
   "keywords": [
     "http",
@@ -17,6 +18,14 @@
   "author": "rochismo <https://github.com/rochismo>",
   "license": "ISC",
   "devDependencies": {
+    "@types/chai": "^4.2.14",
+    "@types/express": "^4.17.9",
+    "@types/mocha": "^8.2.0",
+    "chai": "^4.2.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "mocha": "^8.2.1",
+    "nyc": "^15.1.0",
     "ts-node-dev": "^1.0.0",
     "typescript": "^4.1.2"
   },
